--- a/build.gradle
+++ b/build.gradle
@@ -156,6 +156,10 @@ repositories {
     // flatDir {
     //     dir 'libs'
     // }
+
+    maven {
+        url "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/"
+    }
 }
 
 dependencies {
@@ -175,6 +179,8 @@ dependencies {
     // For more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
+
+    implementation 'software.bernie.geckolib:geckolib-1.18-forge:3.0.23d'
 }
 
 // Example for how to get properties into the manifest for reading at runtime.
